{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 114,
  "lineage": "93e2606a-bffa-e2ee-37c9-defe4b31af18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c34ca17fc519083",
            "arn": "arn:aws:ec2:ap-southeast-1:975049987578:elastic-ip/eipalloc-01c34ca17fc519083",
            "domain": "vpc",
            "id": "eipalloc-01c34ca17fc519083",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-0-26-244.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.26.244",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "App": "aws-cloud-gaming",
              "Name": "cloud-gaming-instance"
            },
            "tags_all": {
              "App": "aws-cloud-gaming",
              "Name": "cloud-gaming-instance"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:975049987578:internet-gateway/igw-038f6a80ec5495746",
            "id": "igw-038f6a80ec5495746",
            "owner_id": "975049987578",
            "region": "ap-southeast-1",
            "tags": {
              "App": "aws-cloud-gaming"
            },
            "tags_all": {
              "App": "aws-cloud-gaming"
            },
            "vpc_id": "vpc-020921888fa2f3954"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:975049987578:route-table/rtb-0f4c3f1b8e528dc07",
            "id": "rtb-0f4c3f1b8e528dc07",
            "owner_id": "975049987578",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038f6a80ec5495746",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "App": "aws-cloud-gaming"
            },
            "tags_all": {
              "App": "aws-cloud-gaming"
            },
            "timeouts": null,
            "vpc_id": "vpc-020921888fa2f3954"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049987578",
            "id": "rtb-0f4c3f1b8e528dc07",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3b695510bcc880d",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0f4c3f1b8e528dc07",
            "subnet_id": "subnet-00fd6641d48b9ab46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:975049987578:security-group/sg-080f190725685a926",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-080f190725685a926",
            "ingress": [],
            "name": "cloud-gaming-sg",
            "name_prefix": "",
            "owner_id": "975049987578",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "App": "aws-cloud-gaming"
            },
            "tags_all": {
              "App": "aws-cloud-gaming"
            },
            "timeouts": null,
            "vpc_id": "vpc-020921888fa2f3954"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049987578",
            "id": "sg-080f190725685a926",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1298637575",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-1",
            "security_group_id": "sg-080f190725685a926",
            "security_group_rule_id": "sgr-040ffc0f149918a81",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rdp_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "184.22.144.133/32"
            ],
            "description": "Allow rdp connections (port 3389)",
            "from_port": 3389,
            "id": "sgrule-233371712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-080f190725685a926",
            "security_group_rule_id": "sgr-0bcdd985cc1ee6540",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vnc_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow vnc connections (port 5900)",
            "from_port": 5900,
            "id": "sgrule-1044869680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-080f190725685a926",
            "security_group_rule_id": "sgr-03eca88c1c657a344",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5900,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:975049987578:subnet/subnet-00fd6641d48b9ab46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fd6641d48b9ab46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049987578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "App": "aws-cloud-gaming"
            },
            "tags_all": {
              "App": "aws-cloud-gaming"
            },
            "vpc_id": "vpc-020921888fa2f3954"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049987578",
            "id": "subnet-00fd6641d48b9ab46",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:975049987578:vpc/vpc-020921888fa2f3954",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07996586517ed8c1e",
            "default_route_table_id": "rtb-08070b5b171a9a3b4",
            "default_security_group_id": "sg-02fc8342333bf9a96",
            "dhcp_options_id": "dopt-01292bbaeffd8a758",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020921888fa2f3954",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08070b5b171a9a3b4",
            "owner_id": "975049987578",
            "region": "ap-southeast-1",
            "tags": {
              "App": "cloud-gaming"
            },
            "tags_all": {
              "App": "cloud-gaming"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049987578",
            "id": "vpc-020921888fa2f3954",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}